# sp1-precompiles-test

./: Cargo.toml  README.md
contracts/: README.md
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
